--- a/index.css
+++ b/index.css
@@ -1,3 +1,25 @@
-body {
-    display: flex
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
+
+
+
+body {
+    display: flex;
+    width: 100vw;
+    height: 100vh;
+    justify-content: center;
+    align-items: center;
+}
+
+#container {
+    max-height: 100%;
+    display: flex;
+    aspect-ratio: 256 / 144;
+    flex-direction: row;
+    flex-grow: 1;
+}
+
+
