--- a/index.css
+++ b/index.css
@@ -4,22 +4,25 @@
     padding: 0;
 }
 
-
-
 body {
     display: flex;
     width: 100vw;
     height: 100vh;
     justify-content: center;
     align-items: center;
+    background-color: black;
 }
 
 #container {
     max-height: 100%;
+    max-width: 100%;
     display: flex;
     aspect-ratio: 256 / 144;
     flex-direction: row;
     flex-grow: 1;
 }
 
-
+#game {
+    width: 100%;
+    height: 100%;
+}
