--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,13 @@
     outline: none;
     color: white;
     text-shadow: 1px 1px black;
+    -webkit-user-select: none;
+    user-select: none;
+}
+
+html {
+    height: 100dvh;
+    width: 100dvw;
 }
 
 body {
